--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
-    "rxjs": "~6.6.0",
+    "rxjs": "^7.5.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.14.10"
   },
